[package]
name = "kctx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
kube = { version = "0.98.0" }
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
