[package]
name = "kctx"
version = "1.0.0"
edition = "2021"
authors = ["phorak"]
description = "Kubernetes Context selector"
repository = "https://github.com/00phorak/kctx"
license = "MIT"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
kube = { version = "0.98.0", features = ["config"] }
k8s-openapi = { version = "0.24.0", features = ["v1_28"] }
serde_yaml = "0.9"

[[bin]]
name = "kctx"
path = "src/main.rs"

[profile.release]
# Optimization settings for better performance
opt-level = 3          # Maximum optimization
lto = true             # Enable link-time optimization
codegen-units = 1      # Optimize for size rather than compile time
panic = 'abort'        # Remove panic unwinding to reduce binary size
strip = true           # Strip symbols from binary
